--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: post) do |form| %>
+<%= form_with(model: post) do |f| %>
   <% if post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -12,27 +12,25 @@
   <% end %>
 
   <div class="field form-group">
-    <%= form.label :title %>
-    <%= form.text_field :title, class: "form-control" %>
+    <%= f.label :title %>
+    <%= f.text_field :title, class: "form-control" %>
   </div>
 
   <div class="field form-group">
-    <%= form.label :description %>
-    <%= form.text_area :description, class: "form-control" %>
+    <%= f.label :description %>
+    <%= f.text_area :description, class: "form-control" %>
   </div>
-  <h3> Sub Posts</h3>
-  <div id = 'sub_posts'>
-    <%= form.fields_for :sub_posts do |sub_post| %> 
-    <% render "sub_post_fields", form: sub_post %>
+    <h3>SubPost </h3>
+    <%= f.fields_for :sub_posts do |subpost| %>
+    <%= render "sub_post_fields", f: subpost %>
     <% end %>
-
-    <div class= "links">
-    <%= link_to_add_association "Add Sub Post", form, :sub_posts %>
+    <div class="link">
+    <%= link_to_add_association "Add Sub Post", f, :sub_posts %>
     </div>
     <div class="field form-group">
-    <%= form.text_field :user_id, id: :post_user_id, class: "form-control", value: current_user.id, type: :hidden %>
+    <%= f.text_field :user_id, id: :post_user_id, class: "form-control", value: current_user.id, type: :hidden %>
   </div>
   <div class="actions">
-    <%= form.submit class: "btn btn-secondary" %>
+    <%= f.submit class: "btn btn-secondary" %>
   </div>
 <% end %>
