--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,14 @@
 <div class="jumbotron">
 <h1 class="display-4"><%= @post.title %></h1>
 <p class= "lead" > <%= @post.description %></p>
+
 <hr class="my-4">
+<h3>Sub Posts</h3>
+<ul>
+  <% for @sub_post in @post.sub_posts %>
+  <li> <%= @sub_post.content %></li>
+  <% end %>
+</ul>
 <p class = "lead">
 <%= link_to "Edit", edit_post_path(@post), class: "btn btn-secondary" %> |
 <%= link_to "Back", posts_path, class: "btn btn-secondary" %>
