--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,7 +11,7 @@
   <% end %>
 </ul>
 <p class = "lead">
-<%= link_to "Edit", edit_post_path(@post), class: "btn btn-secondary" %> |
+<% if can? :update, @post %><%= link_to "Edit", edit_post_path(@post), class: "btn btn-secondary" %>|<% end %>
 <%= link_to "Back", posts_path, class: "btn btn-secondary" %>
 </p>
 </div>
