--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -1,4 +1,8 @@
-<p id="notice"><%= notice %></p>
+<% if notice %>
+    <div class = "alert  alert-info" role=  "alert">
+    <%= notice %>
+    </div>
+    <% end %>
 <div class="jumbotron">
   <h1 class="display-4"><%= @friend.first_name %> <%= @friend.last_name %></h1>
   <p class="lead"><%= @friend.phone %>|<%= @friend.email %>|<%= @friend.twitter %></p>
