--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,8 @@
-<p id="notice"><%= notice %></p>
+<% if notice %>
+    <div class = "alert  alert-info" role=  "alert">
+    <%= notice %>
+    </div>
+    <% end %>
 <div class="jumbotron">
 <h1 class="display-4"><%= @post.title %></h1>
 <p class= "lead" > <%= @post.description %></p>
