--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,6 +8,7 @@
       <th>Title</th>
       <th>Description</th>
       <th colspan="3"></th>
+      <th>Status</th>
     </tr>
   </thead>
 
@@ -19,6 +20,7 @@
         <td><%= link_to "Show", post %></td>
         <td><% if can? :update, post %><%= link_to "Edit", edit_post_path(post) %><% end %></td>
         <td><% if can? :destroy, post %><%= link_to "Destroy", post, method: :delete, data: { confirm: "Are you sure?" } %> <% end %></td>
+        <td><%=post.published%></td>
       </tr>
     <% end %>
   </tbody>
